nix/modules/k3s/manifests/kyverno.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno
