nix/modules/k3s/manifests/longhorn.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
