nix/modules/k3s/manifests/mutate-longhorn-nixos-env.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-longhorn-nixos-env
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: mutate-longhorn-manager
      match:
        any:
          - resources:
              kinds:
                - DaemonSet
              namespaces:
                - longhorn-system
              names:
                - longhorn-manager
      mutate:
        patchStrategicMerge:
          spec:
            template:
              spec:
                containers:
                  - (name): "*"
                    envFrom:
                      - configMapRef:
                          name: longhorn-nixos-path

    - name: mutate-longhorn-driver-deployer
      match:
        any:
          - resources:
              kinds:
                - Deployment
              namespaces:
                - longhorn-system
              names:
                - longhorn-driver-deployer
      mutate:
        patchStrategicMerge:
          spec:
            template:
              spec:
                containers:
                  - (name): "*"
                    envFrom:
                      - configMapRef:
                          name: longhorn-nixos-path

    - name: mutate-longhorn-jobs
      match:
        any:
          - resources:
              kinds:
                - Job
              namespaces:
                - longhorn-system
      mutate:
        patchStrategicMerge:
          spec:
            template:
              spec:
                containers:
                  - (name): "*"
                    envFrom:
                      - configMapRef:
                          name: longhorn-nixos-path
